# echowire

./: .gitignore  ANDROID_STT_PROTOCOL.md  BUG_PERCEPT_DEPENDENCY.md  BUG_REPORT_PROG_GRADLE.md  BUILD_STATUS.md  CHANGELOG.md  CLAUDE.md  DEVICE.md  LANGUAGE_FILTERING.md  MICROPHONE_SOLUTIONS.md  MIGRATION_STEPS.md  MNN_MIGRATION_PLAN.md  MODEL_TEST_RESULTS.md  Makefile  PHASE_5_6_SUMMARY.md  PROMPT.md  README.md  READY_TO_TEST.md  REBRAND_SUMMARY.md  RELEASE_CHECKLIST.md  REQUIREMENTS.md  RESEARCH.md  RESEARCH_ML_FRAMEWORKS.md  SPEC.md  TODO.md  TODO_MNN.md  WHISPER_MODEL_AUDIT.md  WHISPER_TFLITE_GUIDE.md  WHISPER_WORKING.md  gradle.properties  gradlew  settings.gradle.kts  wsformat.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/: README.md  multilingual.tiktoken  whisper_vocab.json
app/src/main/java/com/echowire/config/: EchoWireConfig.kt  RuntimeConfig.kt
app/src/main/java/com/echowire/ml/: AndroidSttBackend.kt  AudioLevelMonitor.kt  EnrollmentRecorder.kt  (+3 more)
app/src/main/java/com/uh/: MainActivity.kt  RuntimeConfig.kt  UhConfig.kt  UhService.kt  UhWebSocketServer.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/mipmap-mdpi/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml
cli/: Cargo.toml
cli/src/: main.rs
models/: .gitignore  README.md
research/: .gitignore  CLAUDE.md  Makefile  SPEC.md  diarize.py  requirements.txt
scripts/: download_convert_models.py  download_models.sh  extract_whisper_vocab.py  invert_vocab.py  test_model_silence.py
tests/: test_whisper_model.py
(+28 files in other folders)
