[package]
name = "uhcli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"
mdns-sd = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
anyhow = "1.0"
futures-util = "0.3"
url = "2.5"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }

[[bin]]
name = "uhcli"
path = "src/main.rs"
